// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:inputArray 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--horizontal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--horizontal"
                    data-amis-name="array"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label amis-Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            颜色集合
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-Form-value"
                    >
                      <div
                        class="amis-ComboControl amis-Form-control is-inline"
                      >
                        <div
                          class="amis-Combo amis-Combo--multi amis-Combo--hor"
                        >
                          <div
                            class="amis-Combo-items"
                          >
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value="amis"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <a
                                class="amis-Combo-delBtn"
                                data-position="bottom"
                                data-tooltip="删除"
                              >
                                <icon-mock
                                  classname="icon icon-status-close"
                                  icon="status-close"
                                />
                              </a>
                            </div>
                          </div>
                          <div
                            class="amis-Combo-toolbar"
                          >
                            <button
                              class="amis-Button amis-Button--default amis-Button--size-default amis-Combo-addBtn"
                              type="button"
                            >
                              <icon-mock
                                classname="icon icon-plus-fine"
                                icon="plus-fine"
                              />
                              <span>
                                新增
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      Submit
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with draggable & draggableTip 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--horizontal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--horizontal"
                    data-amis-name="array"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label amis-Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            颜色集合
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-Form-value"
                    >
                      <div
                        class="amis-ComboControl amis-Form-control is-inline"
                      >
                        <div
                          class="amis-Combo amis-Combo--multi amis-Combo--hor is-draggable"
                        >
                          <div
                            class="amis-Combo-items"
                          >
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemDrager"
                              >
                                <a
                                  data-position="bottom"
                                  data-tooltip="拖拽排序"
                                >
                                  <icon-mock
                                    classname="icon icon-drag-bar"
                                    icon="drag-bar"
                                  />
                                </a>
                              </div>
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value="red"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <a
                                class="amis-Combo-delBtn"
                                data-position="bottom"
                                data-tooltip="删除"
                              >
                                <icon-mock
                                  classname="icon icon-status-close"
                                  icon="status-close"
                                />
                              </a>
                            </div>
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemDrager"
                              >
                                <a
                                  data-position="bottom"
                                  data-tooltip="拖拽排序"
                                >
                                  <icon-mock
                                    classname="icon icon-drag-bar"
                                    icon="drag-bar"
                                  />
                                </a>
                              </div>
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value="blue"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <a
                                class="amis-Combo-delBtn"
                                data-position="bottom"
                                data-tooltip="删除"
                              >
                                <icon-mock
                                  classname="icon icon-status-close"
                                  icon="status-close"
                                />
                              </a>
                            </div>
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemDrager"
                              >
                                <a
                                  data-position="bottom"
                                  data-tooltip="拖拽排序"
                                >
                                  <icon-mock
                                    classname="icon icon-drag-bar"
                                    icon="drag-bar"
                                  />
                                </a>
                              </div>
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value="green"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <a
                                class="amis-Combo-delBtn"
                                data-position="bottom"
                                data-tooltip="删除"
                              >
                                <icon-mock
                                  classname="icon icon-status-close"
                                  icon="status-close"
                                />
                              </a>
                            </div>
                          </div>
                          <div
                            class="amis-Combo-toolbar"
                          >
                            <button
                              class="amis-Button amis-Button--default amis-Button--size-default amis-Combo-addBtn"
                              type="button"
                            >
                              <icon-mock
                                classname="icon icon-plus-fine"
                                icon="plus-fine"
                              />
                              <span>
                                新增
                              </span>
                            </button>
                            <span
                              class="amis-Combo-dragableTip"
                            >
                              我是拖拽提示
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      Submit
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with minLength & maxLength 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--horizontal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--horizontal"
                    data-amis-name="array"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label amis-Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            颜色集合
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-Form-value"
                    >
                      <div
                        class="amis-ComboControl amis-Form-control is-inline"
                      >
                        <div
                          class="amis-Combo amis-Combo--multi amis-Combo--hor"
                        >
                          <div
                            class="amis-Combo-items"
                          >
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value="green"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value=""
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-Combo-toolbar"
                          >
                            <button
                              class="amis-Button amis-Button--default amis-Button--size-default amis-Combo-addBtn"
                              type="button"
                            >
                              <icon-mock
                                classname="icon icon-plus-fine"
                                icon="plus-fine"
                              />
                              <span>
                                新增
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      Submit
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with removable & addable & addButtonText: false 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--horizontal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--horizontal"
                    data-amis-name="array"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label amis-Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            颜色集合
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-Form-value"
                    >
                      <div
                        class="amis-ComboControl amis-Form-control is-inline"
                      >
                        <div
                          class="amis-Combo amis-Combo--multi amis-Combo--hor"
                        >
                          <div
                            class="amis-Combo-items"
                          >
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value="red"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value="blue"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-Combo-toolbar"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      Submit
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with removable & addable & addButtonText: false 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--horizontal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--horizontal"
                    data-amis-name="array"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label amis-Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            颜色集合
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-Form-value"
                    >
                      <div
                        class="amis-ComboControl amis-Form-control is-inline"
                      >
                        <div
                          class="amis-Combo amis-Combo--multi amis-Combo--hor"
                        >
                          <div
                            class="amis-Combo-items"
                          >
                            <div
                              class="amis-Combo-item"
                            >
                              <div
                                class="amis-Combo-itemInner"
                              >
                                <div
                                  class="amis-Form amis-Form--row amis-Combo-form"
                                  novalidate=""
                                >
                                  <input
                                    style="display: none;"
                                    type="submit"
                                  />
                                  <div
                                    class="amis-Form-row"
                                  >
                                    <div
                                      class="amis-Form-col"
                                      style="flex: 1;"
                                    >
                                      <div
                                        class="amis-Form-item amis-Form-item--row"
                                        data-amis-name="flat"
                                        data-role="form-item"
                                      >
                                        <div
                                          class="amis-Form-rowInner"
                                        >
                                          <div
                                            class="amis-Form-control amis-TextControl"
                                          >
                                            <div
                                              class="amis-TextControl-input"
                                            >
                                              <input
                                                autocomplete="off"
                                                class=""
                                                name="flat"
                                                placeholder=""
                                                size="10"
                                                type="text"
                                                value="blue"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <a
                                class="amis-Combo-delBtn"
                                data-position="bottom"
                                data-tooltip="删除"
                              >
                                <icon-mock
                                  classname="icon icon-status-close"
                                  icon="status-close"
                                />
                              </a>
                            </div>
                          </div>
                          <div
                            class="amis-Combo-toolbar"
                          >
                            <button
                              class="amis-Button amis-Button--default amis-Button--size-default amis-Combo-addBtn"
                              type="button"
                            >
                              <icon-mock
                                classname="icon icon-plus-fine"
                                icon="plus-fine"
                              />
                              <span>
                                我是增加按钮
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      Submit
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
